--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.6.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.10",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
@@ -22,6 +23,7 @@
     "typescript-eslint": "^7.16.0"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.0"
   }
 }
