--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
     "eslint": "^9.6.0",
@@ -29,11 +30,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14"
   }
 }
