--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.6.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/dotenv": "^8.2.0",
@@ -19,8 +20,10 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
@@ -29,6 +32,7 @@
     "typescript-eslint": "^7.16.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1659.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
@@ -37,6 +41,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14"
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^6.9.14",
+    "uuid": "^10.0.0"
   }
 }
